Fix monaco auto trims whitespaces

--- a/code-spot-client/src/app/code-editor/code-editor.component.css
+++ b/code-spot-client/src/app/code-editor/code-editor.component.css
@@ -30,7 +30,7 @@
 }
 
 #aux-editor {
-  display: none;
+  /* display: none; */
 }
 
 #loading-img {
